[package]
name = "gpui-pomo"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Pomo"
identifier = "dev.gpui-pomo"
category = "Productivity"
short_description = "A Pomodoro timer"
icon = ["assets/AppIcon.icns"]

[dependencies]
gpui = {package= "gpui-ce", version="*"}
xdg = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
